@@ -1,12 +1,37 @@
 //{{NO_DEPENDENCIES}}
 // Microsoft Developer Studio generated include file.
-// Used by Cxbx.rc
+// Used by C:\Aaron\Projects\OpenXDK\cxbx\Resource\Cxbx.rc
 //
 #define IDI_CXBX                        101
 #define IDB_SPLASH                      102
 #define IDR_MAINMENU                    103
 #define IDB_LOGO                        106
 #define IDB_ABOUT                       108
+#define IDD_CTRLCFG                     111
+#define IDC_SET_X                       1000
+#define IDC_SET_Y                       1001
+#define IDC_SET_A                       1002
+#define IDC_SET_B                       1003
+#define IDC_SET_WHITE                   1004
+#define IDC_SET_BLACK                   1005
+#define IDC_SET_L                       1006
+#define IDC_SET_R                       1007
+#define IDC_SET_LT                      1008
+#define IDC_SET_RT                      1009
+#define IDC_SET_START                   1010
+#define IDC_SET_BACK                    1011
+#define IDC_SET_DPAD_LEFT               1012
+#define IDC_SET_DPAD_RIGHT              1013
+#define IDC_SET_DPAD_UP                 1014
+#define IDC_DPAD_DOWN                   1015
+#define IDC_SET_LEFT_X                  1016
+#define IDC_SET_LEFT_Y                  1017
+#define IDC_SET_RIGHT_X                 1018
+#define IDC_SET_RIGHT_Y                 1019
+#define IDC_LOAD_CONFIG                 1020
+#define IDC_SAVE_CONFIG                 1021
+#define IDC_INPUT_CONFIG_CANCEL         1022
+#define IDC_INPUT_CONFIG_ACCEPT         1023
 #define ID_FILE_EXIT                    40005
 #define ID_HELP_ABOUT                   40008
 #define ID_EMULATION_START              40009
@@ -35,9 +60,9 @@
 // 
 #ifdef APSTUDIO_INVOKED
 #ifndef APSTUDIO_READONLY_SYMBOLS
-#define _APS_NEXT_RESOURCE_VALUE        111
+#define _APS_NEXT_RESOURCE_VALUE        112
 #define _APS_NEXT_COMMAND_VALUE         40049
-#define _APS_NEXT_CONTROL_VALUE         1000
+#define _APS_NEXT_CONTROL_VALUE         1025
 #define _APS_NEXT_SYMED_VALUE           103
 #endif
 #endif
