@@ -9,6 +9,8 @@ version: 0.6.1 (??/??/??)
 
 - Lots of random optimizations
 
+- Some Xbe parsing and debug output fixes
+
 version: 0.6.0-pre12 (02/23/03)
 --------------------------------
 
